Fixing the highlight, also in dark mode

--- a/docs/assets/scss/common/_dark.scss
+++ b/docs/assets/scss/common/_dark.scss
@@ -184,8 +184,8 @@ body.dark pre {
 }
 
 body.dark code {
-  background: $body-overlay-dark;
-  color: $body-color-dark;
+  //background: $body-overlay-dark;
+  //color: $body-color-dark;
 }
 
 body.dark blockquote {
